--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <title>DicomVix Viewer</title>
+    <title>Clinux - DicomVix Viewer</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="fonts.css" />
   </head>
   <body>
     <div id="loading">
@@ -24,45 +25,55 @@
     </header>
     <nav id="drawer"></nav>
     <div id="content">
-      <div id="study-info">
-        <span>DOUGLAS VIEIRA GOMES (30Y) - M</span>
-        <span>MRN: 52432543</span>
-        <span>TC CRANIO S/C | 05/07/2023</span>
+      <div class="study-info">
+        <span id="study-info-patient"></span>
+        <span id="study-info-mrn"></span>
+        <span id="study-info-name"></span>
       </div>
 
       <div id="main-image"></div>
+
+      <div class="study-info">
+        <span id="window-level"></span>
+        <span id="study-name-date"></span>
+      </div>
 
       <div id="stack-buttons">
         <div class="icon-btn" id="prev-image">
           <img src="/icons/chevron-prev.svg" height="25px" alt="Prev image" />
         </div>
-        <span>2/2</span>
+        <span id="stack-counter"></span>
         <div class="icon-btn" id="next-image">
           <img src="/icons/chevron-next.svg" height="25px" alt="Next image" />
         </div>
       </div>
 
       <div class="tools-container">
-        <div class="tool">
-          <img src="/icons/tool-window-level.svg" alt="Window Level" />
-          <span>Window Level</span>
-        </div>
-        <div class="tool">
-          <img src="/icons/tool-zoom.svg" alt="Zoom" />
-          <span>Zoom</span>
-        </div>
-        <div class="tool">
-          <img src="/icons/tool-length.svg" alt="Length" />
-          <span>Length</span>
-        </div>
-        <div class="tool">
-          <img src="/icons/tool-angle.svg" alt="Angle" />
-          <span>Angle</span>
-        </div>
-        <div class="tool">
-          <img src="/icons/cobb-angle.svg" alt="Cobb Angle" />
-          <span>Cobb Angle</span>
-        </div>
+        <button class="tool" id="tool-move">
+          <i class="icon-tool-move"></i>
+
+          <span>Navegar</span>
+        </button>
+        <button class="tool" id="tool-window-level">
+          <i class="icon-tool-window-level"></i>
+
+          <span>Janelamento</span>
+        </button>
+        <button class="tool" id="tool-length">
+          <i class="icon-tool-length"></i>
+
+          <span>Tamanho</span>
+        </button>
+        <button class="tool" id="tool-angle">
+          <i class="icon-tool-angle"></i>
+
+          <span>Ângulo</span>
+        </button>
+        <button class="tool" id="tool-cobb-angle">
+          <i class="icon-cobb-angle"></i>
+
+          <span>Cobb</span>
+        </button>
       </div>
     </div>
 
