--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <title>Clinux - DicomVix Viewer</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="fonts.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/fonts.css" />
   </head>
   <body>
     <div id="loading">
