fix: removido cobb angle

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
           <span>Ângulo</span>
         </button>
-        <button class="tool" id="tool-cobb-angle">
+        <!-- <button class="tool" id="tool-cobb-angle">
           <i class="icon-cobb-angle"></i>
 
           <span>Cobb</span>
-        </button>
+        </button> -->
       </div>
     </div>
 
