feat: tentativa retentativa e mensagem de erro feedback

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/fonts.css" />
   </head>
   <body>
+    <div id="error-box"></div>
     <div id="loading">
       <img src="/genesis-mini.svg" alt="Genesis Viewer" height="50px" />
       <progress id="loading-progress"></progress>
